# Almighty_Bot

./: .gitignore  Dockerfile  Dockerfile_app  Dockerfile_controller  Dockerfile_update  Jenkinsfile  README.md  app.py  app_server.log.2024-04-04  app_server.log.2024-04-08  app_server.log.2024-04-17  app_server.log.2024-04-19  app_server.log.2024-04-25  cert.pem  controller.py  docker-compose.chroma.yaml  docker-compose.mqgpt.yaml  key.pem  log_config.yaml  note_https.txt  output.txt  pyproject.toml  requirement_test.txt  unstructured.json
base/: constants.py  libs.py
bashes/: run_app.sh  run_controller.sh
data_test/: convert_json_to_pdf.py  test.csv
dockerfiles/: Dockerfile_app  Dockerfile_app_knowledge  Dockerfile_chroma  Dockerfile_controller  Dockerfile_jenkins  Dockerfile_retrieval_worker
llava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modelfiles/: Modelfile_vinai_translate_en2vi_v2
monitoring/elk/: docker-compose.elk.yml
requirements/: requirement_app.txt  requirement_app_knowledge.txt  requirement_controller.txt  requirement_retrieval.txt  requirement_test.txt
src/: 2024-03-26-conv.json  app.py  app2.py  app2.pyi  app_knowledge.py  app_server.log.2024-02-22  app_server.log.2024-02-26  app_server.log.2024-04-01  app_server.log.2024-04-16  controller.py
src/base/: constants.py  libs.py
src/llava/: constants.py  conversation.py  http_bot.py  model_api_worker.py  model_worker.py
src/llava_module/: __init__.py  agents_worker.py  agents_worker2.py  (+9 more)
test/: falcon_pdf_bot.py  test_agent.py  test_embedding.py  test_model_llm.py  test_performance.py  test_rq.py  utils.py
(+32 files in other folders)
