[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mq-gpt"
version = "1.0.1"
description = "Towards a multimodal chatbot like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.2.2", "torchvision==0.17.2",
    "transformers==4.39.3", "tokenizers==0.15.2", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic==2.7.1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.27.0", "gradio_client==0.15.1",
    "requests", "httpx==0.27.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.12",
    "supervision==0.10.0", "pycocotools", "opencv-python-headless", "unstructured[all-docs]", 
    "pysoundfile", "sentence-transformers==2.6.1"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
